# mysite

./: .env.template  Dockerfile  devices.csv  docker-compose.yaml  log.txt  orders.csv  orders.json  pyproject.toml  requirements.txt
blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_rssarticle.py
blogapp/templates/blogapp/: rssarticle_detail.html  rssarticle_list.html
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
myapiapp/: serializers.py  views.py
myauth/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
myauth/management/commands/: bind_user.py
myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
myauth/templates/myauth/: about-me.html  avatar-update.html  (+5 more)
mysite/: settings.py  sitemaps.py  urls.py
requestdataapp/: forms.py  middlewares.py  urls.py  views.py
shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
shopapp/fixtures/: order.json  product.json  products-fixture.json  users.json
shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_description_and_more.py  0008_alter_product_name_alter_product_price.py  0009_product_created_by.py  0010_order_receipt.py  0011_product_preview.py  0012_productimage.py  0013_alter_order_options_alter_product_options_and_more.py
(+27 files in other folders)
