[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro",email = "gabspace@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-filter (>=25.1,<26.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
